fix: Align the logo image and center the login card

--- a/style.css
+++ b/style.css
@@ -1,42 +1,44 @@
 /*  reseta o css */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: #1A1919;
+  background: #1a1919;
 }
 
 #container {
-    display: grid; /* mostra em grades */
-    grid-template-columns: 50% 50%; /* cada grade terá 50% o valor da tela */
+  display: grid; /* mostra em grades */
+  grid-template-columns: 50% 50%; /* cada grade terá 50% o valor da tela */
 }
 
 .left-card {
-    display: flex;
-    align-items: center; /* alinha ao centro */
-    flex-direction: column;
-    border: 1px solid red;
-    height: 100vh; /* toda a tela vertical */
+  display: flex;
+  align-items: center; /* alinha ao centro */
+  flex-direction: column;
+  border: 1px solid red;
+  height: 100vh; /* toda a tela vertical */
 }
 
 .left-card img {
-    align-self: baseline;
+  position: absolute;
+  left: 40px;
+  top: 40px;
 }
 
 #login-card {
-    border: 1px solid blue;
-    background: #212121;
-    border-radius: 20px; /* arredondamento dos cantos */
-    max-width: 1144px; /* largura maxima */
-    max-height: 1024px; /* altura maxima */
-    width: 75%; /* largura de 75% o tamanho da div pai */
-    height: 55%; /* altura de 55% o tamanho da div pai */
-    margin: auto;
+  border: 1px solid blue;
+  background: #212121;
+  border-radius: 20px; /* arredondamento dos cantos */
+  max-width: 1144px; /* largura maxima */
+  max-height: 1024px; /* altura maxima */
+  width: 75%; /* largura de 75% o tamanho da div pai */
+  height: 55%; /* altura de 55% o tamanho da div pai */
+  margin: auto;
 }
 
 .right-card {
-    border: 1px solid green;
+  border: 1px solid green;
 }
